--- a/HW22_WPF_MVVM/HW22_Drugs/MainWindow.xaml
+++ b/HW22_WPF_MVVM/HW22_Drugs/MainWindow.xaml
@@ -6,7 +6,55 @@
         xmlns:local="clr-namespace:HW22_Drugs"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.Resources>
+        <Style TargetType="TextBlock">
+            <Setter Property="FontSize" Value="14" />
+        </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="FontSize" Value="14" />
+        </Style>
+        <Style TargetType="Button">
+            <Setter Property="MinWidth" Value="30" />
+            <Setter Property="Margin" Value="3" />
+        </Style>
+    </Window.Resources>
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="4*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
+        <Menu Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
+            <MenuItem Header="Файл">
+                <MenuItem Header="Відкрити" Command="{Binding FileOpenCommand}"/>
+                <MenuItem Header="Зберегти" Command="{Binding FileSaveCommand}"/>
+            </MenuItem>
+        </Menu>
+
+        <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Horizontal">
+            <Button Content="➕" Foreground="Green" FontWeight="Bold"/>
+            <Button Content="✏" Foreground="Blue" FontWeight="Bold"/>
+            <Button Content="❌" Foreground="Red" FontWeight="Bold"/>
+        </StackPanel>
+
+        <ListBox Grid.Row="2" Grid.Column="0"
+                 ItemsSource="{Binding FamilyMembers}" SelectedItem="{Binding SelectedFamilyMember}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Border CornerRadius="3" Background="AliceBlue" BorderThickness="1">
+                        <StackPanel Margin="5">
+                            <TextBlock FontSize="18" Text="{Binding Path=Name}" FontWeight="Bold" Foreground="SteelBlue"/>
+                            <TextBlock Text="{Binding Path=DateOfBirth}" />
+                            <TextBlock Text="{Binding Path=UUID}" />
+                        </StackPanel>
+                    </Border>                    
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
     </Grid>
 </Window>
