--- a/HW22_WPF_MVVM/HW22_Drugs/MainWindow.xaml
+++ b/HW22_WPF_MVVM/HW22_Drugs/MainWindow.xaml
@@ -3,10 +3,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:conv="clr-namespace:HW22_Drugs.Converters"
         xmlns:local="clr-namespace:HW22_Drugs"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="600" Width="1000" Background="#334F66">
     <Window.Resources>
+        <conv:DateTimeToString_ValConverter x:Key="DateTimeToStringValConverter"/>
+        <conv:DateTime2ToString_ValConverter x:Key="DateTime2ToStringValConverter"/>
+        <conv:DateToString_ValConverter x:Key="DateToStringValConverter"/>
+        
         <Style TargetType="TextBlock">
             <Setter Property="FontSize" Value="14" />
         </Style>
@@ -17,44 +22,232 @@
             <Setter Property="MinWidth" Value="30" />
             <Setter Property="Margin" Value="3" />
         </Style>
+
+        <Style TargetType="DataGrid" x:Key="DataTable">
+            <Setter Property="AutoGenerateColumns" Value="True"/>
+            <Setter Property="GridLinesVisibility" Value="All"/>
+            <Setter Property="VerticalGridLinesBrush" Value="#EDF0F2"/>
+            <Setter Property="HorizontalGridLinesBrush" Value="#F2F5F7"/>
+            <Setter Property="AlternatingRowBackground" Value="#F9FBFC"/>
+            <Setter Property="SelectionMode" Value="Single"/>
+            <Setter Property="SelectionUnit" Value="FullRow"/>
+            <Setter Property="CanUserAddRows" Value="False"/>
+            <Setter Property="CanUserDeleteRows" Value="False"/>
+            <Setter Property="CanUserReorderColumns" Value="True"/>
+            <Setter Property="CanUserResizeColumns" Value="True"/>
+            <Setter Property="CanUserResizeRows" Value="False"/>
+            <Setter Property="CanUserSortColumns" Value="True"/>
+            <Setter Property="MinHeight" Value="100"/>
+            <Setter Property="Margin" Value="3"/>
+
+            <Style.Resources>
+                <SolidColorBrush Color="#D7DDE0" x:Key="{x:Static SystemColors.HighlightBrushKey}" />
+                <SolidColorBrush Color="#E0E4E5" x:Key="{x:Static SystemColors.InactiveSelectionHighlightBrushKey}" />
+                <SolidColorBrush Color="{x:Static SystemColors.ControlTextColor}" x:Key="{x:Static SystemColors.HighlightTextBrushKey}"/>
+            </Style.Resources>
+        </Style>
     </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="4*"/>
+            <ColumnDefinition Width="Auto" MinWidth="4"/>
+            <ColumnDefinition Width="*" MinWidth="100"/>
+            <ColumnDefinition Width="Auto" MinWidth="4"/>
+            <ColumnDefinition Width="3*" MinWidth="100"/>
+            <ColumnDefinition Width="Auto" MinWidth="4"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto" MinHeight="3"/>
+            <RowDefinition Height="*" MinHeight="100"/>
+            <RowDefinition Height="Auto" MinHeight="3"/>
+            <RowDefinition Height="*" MinHeight="100"/>
+            <RowDefinition Height="Auto" MinHeight="3"/>
         </Grid.RowDefinitions>
 
-        <Menu Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
+        <Menu Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5">
             <MenuItem Header="Файл">
                 <MenuItem Header="Відкрити" Command="{Binding FileOpenCommand}"/>
                 <MenuItem Header="Зберегти" Command="{Binding FileSaveCommand}"/>
             </MenuItem>
         </Menu>
 
-        <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Horizontal">
-            <Button Content="➕" Foreground="Green" FontWeight="Bold"/>
-            <Button Content="✏" Foreground="Blue" FontWeight="Bold"/>
-            <Button Content="❌" Foreground="Red" FontWeight="Bold"/>
-        </StackPanel>
+        <GridSplitter Grid.Row="3" Grid.Column="1" HorizontalAlignment="Stretch" Height="4" Background="Transparent"/>
 
-        <ListBox Grid.Row="2" Grid.Column="0"
-                 ItemsSource="{Binding FamilyMembers}" SelectedItem="{Binding SelectedFamilyMember}">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <Border CornerRadius="3" Background="AliceBlue" BorderThickness="1">
-                        <StackPanel Margin="5">
-                            <TextBlock FontSize="18" Text="{Binding Path=Name}" FontWeight="Bold" Foreground="SteelBlue"/>
-                            <TextBlock Text="{Binding Path=DateOfBirth}" />
-                            <TextBlock Text="{Binding Path=UUID}" />
-                        </StackPanel>
-                    </Border>                    
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
+        <GridSplitter Grid.Row="2" Grid.RowSpan="3" Grid.Column="2"  HorizontalAlignment="Stretch" Width="4" Background="Transparent"/>
+
+        <Border Grid.Row="2" Grid.Column="1" CornerRadius="5"
+                BorderThickness="1" BorderBrush="#0078D7" Background="#CEDBE5">
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4"
+                           Text="Члени сім'ї" Margin="3" FontSize="11" FontWeight="Bold"/>
+                <Button Grid.Row="1" Grid.Column="0"
+                        Command="{Binding FamilyMemberAddCommand}"
+                        Content="➕" Foreground="Green" FontWeight="Bold"/>
+                <Button Grid.Row="1" Grid.Column="1"
+                        Command="{Binding FamilyMemberEditCommand}" CommandParameter="{Binding SelectedFamilyMember}"
+                        Content="✏" Foreground="Blue" FontWeight="Bold"/>
+                <Button Grid.Row="1" Grid.Column="3"
+                        Command="{Binding FamilyMemberRemoveCommand}" CommandParameter="{Binding SelectedFamilyMember}"
+                        Content="❌" Foreground="Red" FontWeight="Bold"/>
+                <ListBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4"
+                         ItemsSource="{Binding FamilyMembers}" SelectedItem="{Binding SelectedFamilyMember}"
+                         Margin="3">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Border CornerRadius="3" Background="AliceBlue" BorderThickness="1">
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto" MinHeight="20"/>
+                                        <RowDefinition Height="Auto" MinHeight="20"/>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Grid.Row="0" Grid.Column="0"
+                                               FontSize="18" Text="{Binding Path=Name}" FontWeight="Bold" Foreground="SteelBlue"/>
+                                    <TextBlock Grid.Row="1" Grid.Column="0"
+                                               Text="{Binding Path=DateOfBirth, Converter={StaticResource DateToStringValConverter}}" />
+                                </Grid>                                
+                            </Border>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </Grid>
+        </Border >
+
+        
+
+        <Border Grid.Row="4" Grid.Column="1" CornerRadius="5"
+                BorderThickness="1" BorderBrush="#0078D7"  Background="#CEDBE5">
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4"
+                           Text="Курси ліків обраного члена сім'ї" Margin="3" FontSize="11" FontWeight="Bold"/>
+                <Button Grid.Row="1" Grid.Column="0"
+                        Command="{Binding MedicationCourseAddCommand}" CommandParameter="{Binding SelectedMedicationCourse}"
+                        Content="➕" Foreground="Green" FontWeight="Bold"/>
+                <Button Grid.Row="1" Grid.Column="1"
+                        Command="{Binding MedicationCourseEditCommand}" CommandParameter="{Binding SelectedMedicationCourse}"
+                        Content="✏" Foreground="Blue" FontWeight="Bold"/>
+                <Button Grid.Row="1" Grid.Column="3"
+                        Command="{Binding MedicationCourseRemoveCommand}" CommandParameter="{Binding SelectedMedicationCourse}"
+                        Content="❌" Foreground="Red" FontWeight="Bold"/>
+                <ListBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4"
+                         ItemsSource="{Binding SelectedFamilyMember.MedicationCourses}" SelectedItem="{Binding SelectedMedicationCourse}"
+                         Margin="3">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Border CornerRadius="3" Background="AliceBlue" BorderThickness="1">
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto" MinHeight="20"/>
+                                        <RowDefinition Height="Auto" MinHeight="20"/>
+                                        <RowDefinition Height="Auto" MinHeight="20"/>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    
+                                    <TextBlock Grid.Row="0" Grid.Column="0"
+                                               FontSize="18" Text="{Binding Path=Medication}" FontWeight="Bold" Foreground="SteelBlue"/>
+                                    <TextBlock Grid.Row="1" Grid.Column="0"
+                                               Text="{Binding Path=MedicationDescription}" FontWeight="Bold"/>
+                                    <TextBlock Grid.Row="2" Grid.Column="0"
+                                               Text="{Binding Path=MedicationGroup}" Foreground="#A0A0A0"/>
+                                </Grid>
+                            </Border>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </Grid>
+        </Border >
+
+        <Border Grid.Row="2" Grid.RowSpan="3" Grid.Column="3" CornerRadius="5"
+                BorderThickness="1" BorderBrush="#0078D7"  Background="#CEDBE5">
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4"
+                           Text="Графік прийому ліків обраного члена сім'ї" Margin="3" FontSize="11" FontWeight="Bold"/>
+                <Button Grid.Row="1" Grid.Column="0"
+                        Command="{Binding FamilyMemberAddCommand}"
+                        Content="➕" Foreground="Green" FontWeight="Bold"/>
+                <Button Grid.Row="1" Grid.Column="1"
+                        Command="{Binding FamilyMemberEditCommand}" CommandParameter="{Binding SelectedFamilyMember}"
+                        Content="✏" Foreground="Blue" FontWeight="Bold"/>
+                <Button Grid.Row="1" Grid.Column="3"
+                        Command="{Binding FamilyMemberRemoveCommand}" CommandParameter="{Binding SelectedFamilyMember}"
+                        Content="❌" Foreground="Red" FontWeight="Bold"/>
+
+                <DataGrid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4" Style="{StaticResource DataTable}"
+                          ItemsSource="{Binding SelectedFamilyMember.ScheduledMedicationIntakes}">
+                    <DataGrid.Columns>
+                        <DataGridTemplateColumn>
+                            <DataGridTemplateColumn.Header>
+                                <TextBlock>
+                                    <Run Text="Час"/>
+                                    <LineBreak/>
+                                    <Run Text="Плановий"/>
+                                </TextBlock>
+                            </DataGridTemplateColumn.Header>
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Path=PlanedTime, Converter={StaticResource DateTime2ToStringValConverter}}"/>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+
+                        <DataGridTemplateColumn>
+                            <DataGridTemplateColumn.Header>
+                                <TextBlock>
+                                    <Run Text="Час"/>
+                                    <LineBreak/>
+                                    <Run Text="Фактичний"/>
+                                </TextBlock>
+                            </DataGridTemplateColumn.Header>
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Path=FactTime, Converter={StaticResource DateTime2ToStringValConverter}}"/>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </Grid>
+        </Border >
+
     </Grid>
 </Window>
